@@ -22,6 +22,7 @@
  */
 package org.neo4j.harness;
 
+import org.junit.ClassRule;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.runners.model.Statement;
@@ -33,55 +34,51 @@ import java.time.OffsetDateTime;
 import java.time.ZoneOffset;
 import java.util.List;
 
+import org.neo4j.configuration.Config;
+import org.neo4j.configuration.GraphDatabaseSettings;
+import org.neo4j.dbms.api.DatabaseManagementService;
 import org.neo4j.graphdb.GraphDatabaseService;
 import org.neo4j.graphdb.Label;
 import org.neo4j.graphdb.Result;
 import org.neo4j.graphdb.Transaction;
-import org.neo4j.graphdb.factory.GraphDatabaseSettings;
 import org.neo4j.harness.extensionpackage.MyUnmanagedExtension;
-import org.neo4j.harness.junit.Neo4jRule;
-import org.neo4j.helpers.collection.Iterators;
-import org.neo4j.kernel.configuration.Config;
-import org.neo4j.kernel.configuration.ssl.LegacySslPolicyConfig;
+import org.neo4j.harness.junit.rule.Neo4jRule;
+import org.neo4j.internal.helpers.collection.Iterators;
 import org.neo4j.kernel.internal.GraphDatabaseAPI;
 import org.neo4j.logging.LogTimeZone;
-import org.neo4j.test.TestGraphDatabaseFactory;
+import org.neo4j.test.TestDatabaseManagementServiceBuilder;
 import org.neo4j.test.rule.SuppressOutput;
 import org.neo4j.test.rule.TestDirectory;
 import org.neo4j.test.server.HTTP;
 
-import static java.nio.charset.StandardCharsets.UTF_8;
 import static java.time.ZoneOffset.UTC;
 import static org.hamcrest.CoreMatchers.containsString;
 import static org.hamcrest.CoreMatchers.equalTo;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.Assert.assertEquals;
-import static org.neo4j.server.ServerTestUtils.getRelativePath;
-import static org.neo4j.server.ServerTestUtils.getSharedTestTemporaryFolder;
+import static org.neo4j.configuration.GraphDatabaseSettings.DEFAULT_DATABASE_NAME;
 import static org.neo4j.test.server.HTTP.RawPayload.quotedJson;
 
 public class JUnitRuleTestIT
 {
-    @Rule
-    public TestDirectory testDirectory = TestDirectory.testDirectory();
+    @ClassRule
+    public static TestDirectory testDirectory = TestDirectory.testDirectory();
     @Rule
     public SuppressOutput suppressOutput = SuppressOutput.suppressAll();
     @Rule
     public Neo4jRule neo4j = new Neo4jRule()
             .withFixture( "CREATE (u:User)" )
-            .withConfig( GraphDatabaseSettings.db_timezone.name(), LogTimeZone.SYSTEM.toString() )
-            .withConfig( LegacySslPolicyConfig.certificates_directory.name(),
-                    getRelativePath( getSharedTestTemporaryFolder(), LegacySslPolicyConfig.certificates_directory ) )
+            .withConfig( GraphDatabaseSettings.db_timezone, LogTimeZone.SYSTEM )
             .withFixture( graphDatabaseService ->
             {
                 try ( Transaction tx = graphDatabaseService.beginTx() )
                 {
-                    graphDatabaseService.createNode( Label.label( "User" ) );
-                    tx.success();
+                    tx.createNode( Label.label( "User" ) );
+                    tx.commit();
                 }
                 return null;
             } )
-            .withExtension( "/test", MyUnmanagedExtension.class );
+            .withUnmanagedExtension( "/test", MyUnmanagedExtension.class );
 
     @Test
     public void shouldExtensionWork()
@@ -102,7 +99,7 @@ public class JUnitRuleTestIT
         // When I run this test
 
         // Then
-        HTTP.Response response = HTTP.POST( neo4j.httpURI().toString() + "db/data/transaction/commit",
+        HTTP.Response response = HTTP.POST( neo4j.httpURI().toString() + "db/neo4j/tx/commit",
                 quotedJson( "{'statements':[{'statement':'MATCH (n:User) RETURN n'}]}" ) );
 
         assertThat( response.get( "results" ).get( 0 ).get( "data" ).size(), equalTo( 2 ) );
@@ -112,48 +109,54 @@ public class JUnitRuleTestIT
     public void shouldGraphDatabaseServiceBeAccessible()
     {
         // Given the rule in the beginning of this class
-
         // When I run this test
 
-        // Then
-        assertEquals( 2, Iterators.count(
-                neo4j.getGraphDatabaseService().execute( "MATCH (n:User) RETURN n" )
-        ) );
+        final GraphDatabaseService graphDatabaseService = neo4j.defaultDatabaseService();
+        try ( Transaction transaction = graphDatabaseService.beginTx() )
+        {
+            // Then
+            assertEquals( 2, Iterators.count( transaction.execute( "MATCH (n:User) RETURN n" ) ) );
+            transaction.commit();
+        }
     }
 
     @Test
     public void shouldRuleWorkWithExistingDirectory() throws Throwable
     {
-        // given a root folder, create /databases/graph.db folders.
-        File oldDir = testDirectory.directory( "old" );
-        File storeDir = Config.defaults( GraphDatabaseSettings.data_directory, oldDir.toPath().toString() )
-                .get( GraphDatabaseSettings.database_path );
-        GraphDatabaseService db = new TestGraphDatabaseFactory().newEmbeddedDatabase( storeDir );
+        // given a root folder, create /databases/neo4j folders.
+        File oldLayout = testDirectory.homeDir( "old" );
+        DatabaseManagementService managementService = new TestDatabaseManagementServiceBuilder( oldLayout ).build();
+        GraphDatabaseService db = managementService.database( DEFAULT_DATABASE_NAME );
 
-        try
+        try ( Transaction transaction = db.beginTx() )
         {
-            db.execute( "CREATE ()" );
+            transaction.execute( "CREATE ()" );
+            transaction.commit();
         }
         finally
         {
-            db.shutdown();
+            managementService.shutdown();
         }
 
         // When a rule with an pre-populated graph db directory is used
-        File newDir = testDirectory.directory( "new" );
-        final Neo4jRule ruleWithDirectory = new Neo4jRule( newDir )
-                .copyFrom( oldDir );
+        File newLayout = testDirectory.homeDir( "new" );
+        final Neo4jRule ruleWithDirectory = new Neo4jRule( newLayout ).copyFrom( oldLayout );
         Statement statement = ruleWithDirectory.apply( new Statement()
         {
             @Override
             public void evaluate()
             {
                 // Then the database is not empty
-                Result result = ruleWithDirectory.getGraphDatabaseService().execute( "MATCH (n) RETURN count(n) AS " + "count" );
-
-                List<Object> column = Iterators.asList( result.columnAs( "count" ) );
-                assertEquals( 1, column.size() );
-                assertEquals( 1L, column.get( 0 ) );
+                final GraphDatabaseService graphDatabaseService = ruleWithDirectory.defaultDatabaseService();
+                try ( Transaction transaction = graphDatabaseService.beginTx() )
+                {
+                    try ( Result result = transaction.execute( "MATCH (n) RETURN count(n) AS " + "count" ) )
+                    {
+                        List<Object> column = Iterators.asList( result.columnAs( "count" ) );
+                        assertEquals( 1, column.size() );
+                        assertEquals( 1L, column.get( 0 ) );
+                    }
+                }
             }
         }, null );
 
@@ -172,10 +175,10 @@ public class JUnitRuleTestIT
 
     private String contentOf( String file ) throws IOException
     {
-        GraphDatabaseAPI api = (GraphDatabaseAPI) neo4j.getGraphDatabaseService();
+        GraphDatabaseAPI api = (GraphDatabaseAPI) neo4j.defaultDatabaseService();
         Config config = api.getDependencyResolver().resolveDependency( Config.class );
-        File dataDirectory = config.get( GraphDatabaseSettings.data_directory );
-        return new String( Files.readAllBytes( new File( dataDirectory, file ).toPath() ), UTF_8 );
+        File homeDir = config.get( GraphDatabaseSettings.neo4j_home ).toFile();
+        return Files.readString( new File( homeDir, file ).toPath() );
     }
 
     private static String currentTimeZoneOffsetString()
